--- a/testrunner/build.gradle
+++ b/testrunner/build.gradle
@@ -4,7 +4,7 @@ version '1.0'
 apply plugin: 'java'
 apply plugin: 'groovy'
 
-sourceCompatibility = 1.5
+//sourceCompatibility = 1.7
 
 repositories {
     mavenCentral()
