--- a/testapi/build.gradle
+++ b/testapi/build.gradle
@@ -94,6 +94,7 @@ dependencies {
     compile group:'net.java.dev.jna' , name:'jna' , version:'3.4.0'
     compile group:'net.java.dev.jna' , name:'platform' , version:'3.4.0'
 
+    testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
