--- a/testdriver/build.gradle
+++ b/testdriver/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     compile group: 'org.webbitserver', name: 'webbit', version: '0.4.15'
     compile group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
 
+
+    testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
 }
