--- a/testrunner/build.gradle
+++ b/testrunner/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     compile group:'javax.mail' , name:'mail' , version:'1.4.5'
     compile group:'log4j' , name:'log4j' , version:'1.2.14'
     compile group: 'junit', name: 'junit', version: '4.11'
+
+    testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
 }
