1.commit jmockit dependency to the build.gradle since the error;2.add module testcrawler for crawl page;3.Add util classes for testproject

--- a/settings.gradle
+++ b/settings.gradle
@@ -3,4 +3,5 @@ include 'testapi', 'testdriver','testproject'
 //findProject(':testproject')?.name = 'test4fun'
 include 'generator'
 include 'testrunner'
+include 'testcrawler'
 
