--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ subprojects {
     }
 
     dependencies {
+//        testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
         testCompile group: 'junit', name: 'junit', version: '4.11'
     }
 
