--- a/testdriver/build.gradle
+++ b/testdriver/build.gradle
@@ -53,7 +53,7 @@ dependencies {
     compile group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
 
 
-    testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
+//    testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
 }
