--- a/testrunner/build.gradle
+++ b/testrunner/build.gradle
@@ -30,7 +30,7 @@ dependencies {
     compile group:'log4j' , name:'log4j' , version:'1.2.14'
     compile group: 'junit', name: 'junit', version: '4.11'
 
-    testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
+//    testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
     testCompile group: 'junit', name: 'junit', version: '4.11'
 
 }
