update keyword class try to change it as a interface, put the test class under test project folder

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ gradle-app.setting
 ## Directory-based project format:
 .idea/
 
+## AWO test project
+testawo/
+
 ## File-based project format:
 *.ipr
 *.iws
