--- a/build.gradle
+++ b/build.gradle
@@ -23,11 +23,20 @@ subprojects {
 
     repositories {
         mavenCentral()
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots'
+        }
     }
 
+
+
     dependencies {
-//        testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
-        testCompile group: 'junit', name: 'junit', version: '4.11'
+
+        //testCompile group: 'junit', name: 'junit', version: '4.11'
+        testCompile files('../testapi/libs/jmockit.jar')
+        testCompile group: 'org.testng', name: 'testng', version: '6.9.10'
+
+
     }
 
     configurations.all {
