--- a/generator/build.gradle
+++ b/generator/build.gradle
@@ -25,5 +25,6 @@ repositories {
 //gradle init --type java-library
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile files('../testapi/libs/jmockit.jar')
+    testCompile group: 'org.testng', name: 'testng', version: '6.9.10'
 }
