--- a/testcrawler/build.gradle
+++ b/testcrawler/build.gradle
@@ -12,5 +12,7 @@ repositories {
 dependencies {
     compile group:'com.crawljax' , name:'crawljax-web' , version:'3.6'
     compile group:'com.crawljax' , name:'crawljax-core' , version:'3.6'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    //testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile files('../testapi/libs/jmockit.jar')
+    testCompile group: 'org.testng', name: 'testng', version: '6.9.10'
 }
