--- a/testdriver/build.gradle
+++ b/testdriver/build.gradle
@@ -32,7 +32,7 @@ dependencies {
     compile group: 'com.codeborne', name: 'phantomjsdriver', version: '1.2.1'
 
 
-    compile group: 'org.jsoup', name: 'jsoup', version: '1.7.2'
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.7.3'
 
     compile group: 'commons-io', name: 'commons-io', version: '2.4'
     compile group: 'commons-logging', name: 'commons-logging', version: '1.1.3'
@@ -41,8 +41,7 @@ dependencies {
     compile group: 'org.json', name: 'json', version: '20080701'
     compile group: 'com.google.guava', name: 'guava', version: '18.0'
     compile group: 'cglib', name: 'cglib-nodep', version: '2.1_3'
-    compile group: 'junit', name: 'junit', version: '4.11'
-    compile group: 'org.testng', name: 'testng', version: '6.8.7'
+
     compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.3.6'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.1'
 
@@ -54,6 +53,7 @@ dependencies {
 
 
 //    testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile files('../testapi/libs/jmockit.jar')
+    testCompile group: 'org.testng', name: 'testng', version: '6.9.10'
 
 }
