--- a/testrunner/build.gradle
+++ b/testrunner/build.gradle
@@ -10,6 +10,8 @@ repositories {
     mavenCentral()
 }
 
+
+
 //Build Distribution Test
 
 //task build jar for rpc daemon and return the absolute address
@@ -28,9 +30,10 @@ dependencies {
     compile group:'javax.jms' , name:'jms-api' , version:'1.1-rev-1'
     compile group:'javax.mail' , name:'mail' , version:'1.4.5'
     compile group:'log4j' , name:'log4j' , version:'1.2.14'
-    compile group: 'junit', name: 'junit', version: '4.11'
+    //compile group: 'junit', name: 'junit', version: '4.11'
 
 //    testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    testCompile files('../testapi/libs/jmockit.jar')
+    testCompile group: 'org.testng', name: 'testng', version: '6.9.10'
 
 }
