update build gradle to resolve ojdbc14.jar since it can not be found in maven repo

--- a/testapi/build.gradle
+++ b/testapi/build.gradle
@@ -38,7 +38,8 @@ repositories {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     //compile group:'oracle' , name:'OracleJDBC' , version:'11.2.0.3.0'
-    compile group: 'com.oracle', name: 'ojdbc14', version: '10.2.0.4.0'
+    //compile group: 'com.oracle', name: 'ojdbc14', version: '10.2.0.4.0'
+    compile files('libs/ojdbc14.jar')
 
     //compile group:'com.hynnet' , name:'oracle-driver-ojdbc6' , version:'12.1.0.1'
     compile group: 'mysql', name: 'mysql-connector-java', version: '5.1.21'
