--- a/testdriver/build.gradle
+++ b/testdriver/build.gradle
@@ -50,8 +50,7 @@ dependencies {
     compile group: 'org.hamcrest', name: 'hamcrest-all', version: '1.3'
     compile group: 'org.webbitserver', name: 'webbit', version: '0.4.15'
     compile group: 'net.jcip', name: 'jcip-annotations', version: '1.0'
-
-
+    compile files('../testapi/libs/autoitx.jar')
 
 //    testComplie group: 'org.jmockit', name: 'jmockit', version: '1.21'
     testCompile files('../testapi/libs/jmockit.jar')
