--- a/testdriver/build.gradle
+++ b/testdriver/build.gradle
@@ -3,7 +3,7 @@ version '1.0'
 
 apply plugin: 'idea'
 apply plugin: 'eclipse'
-apply plugin: 'application'
+//apply plugin: 'application'
 apply plugin: 'groovy'
 apply plugin: 'java'
 
