--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,7 @@
 rootProject.name = 'test4fun'
-include 'testapi', 'testdriver','testproject'
-//findProject(':testproject')?.name = 'test4fun'
+include 'testapi'
+include 'testdriver'
+include 'testproject'
 include 'generator'
 include 'testrunner'
 include 'testcrawler'
