update test.properties, remove some info

--- a/testproject/properties/test.properties
+++ b/testproject/properties/test.properties
@@ -17,29 +17,11 @@ db.mysql.driver = com.mysql.jdbc.Driver
 
 #the automation database
 
-#auto.db.vendor=oracle
-#auto.db.connectURL = jdbc:oracle:thin:@awotordevqadb-scan.dev.activenetwork.com:1521/toaoauto
-#auto.db.user=auto
-#auto.db.pw = 0A97A61B11FA3EC6959484A3088651BE
 auto.db.vendor=mysql
 auto.db.connectURL=jdbc:mysql://WD00070367:3306/mig_qa
-#jdbc:mysql://10.110.10.134:3306/mig_qa
 auto.db.user=mig_auto
 auto.db.psw = apps1
 
-
-#the db for qa1
-qa1.db.vendor=oracle
-qa1.db.connectURL = jdbc:oracle:thin:@awotordevqadb-scan.dev.activenetwork.com:1521/toaous1q
-#qa1.db.connectURL = jdbc:oracle:thin:@10.132.10.220:1521/msgawo1q
-qa1.db.schema.prefix=LIVE_
-qa1.global.schema=GLOBAL
-qa1.db.user=GLOBAL
-qa1.db.pw=0A97A61B11FA3EC6959484A3088651BE
-
-
-qa.project.web.url.pattern=
-qa.project.mobile.url.pattern=
 
 
 # email notification
@@ -51,40 +33,39 @@ notification.cc=tony.chen@activenetwork.com
 #qachinatest@activenetwork.com
 #notification.to=jdu@reserveamerica.com
 notification.debug.to=tony.chen@activenetwork.com
-#james.du@activenetwork.com
 notification.subject=
 notification.msg=
 notification.enable=true
 
 #email server
-#mail.smtp.host=awotorsmtp.reserveamerica.com
-mail.smtp.host=lassmtpint.active.local
-mail.smtp.auth=false
-mail.smtp.port=25
-#mail.smtp.auth=true
-mail.smtp.user=AO.qaormstest
-mail.smtp.pw=E0A54A133AB6665ADF1C95CCBB4BD29D
+#mail.smtp.host=
+mail.smtp.host=
+mail.smtp.auth=
+mail.smtp.port=
+#mail.smtp.auth=
+mail.smtp.user=
+mail.smtp.pw=
 
 #POP3
-mail.pop3.host=awotorqamqctl01.dev.activenetwork.com
-#mail.pop3.host=test-monitor.qa.reserveamerica.com
-mail.pop3.port=1110
-mail.pop3.user=AO.qaormstest
-#mail.pop3.user=qachinatest
-mail.pop3.pw=E0A54A133AB6665ADF1C95CCBB4BD29D
+mail.pop3.host=
+#mail.pop3.host=
+mail.pop3.port=
+mail.pop3.user=
+#mail.pop3.user=
+mail.pop3.pw=
 
 #IMAP
-#mail.imap.host=test-monitor.qa.reserveamerica.com
-mail.imap.host=awotorqamqctl01.dev.activenetwork.com
-mail.imap.port=1143
-mail.imap.user=AO.qaormstest
-mail.imap.pw=E0A54A133AB6665ADF1C95CCBB4BD29D
+#mail.imap.host=
+mail.imap.host=
+mail.imap.port=
+mail.imap.user=
+mail.imap.pw=
 
-mail.default.provider=imap
-mail.report.folder=report_regression
-mail.report.delete=true
-mail.report.subject.keyword=#Regression test - report#
-mail.notification.folder=inbox
+mail.default.provider=
+mail.report.folder=
+mail.report.delete=
+mail.report.subject.keyword=
+mail.notification.folder=
 
 
 #timing
@@ -121,20 +102,20 @@ action.delay.sync=400
 
 
 #Message Queue
-mq.url=10.132.9.37:7676
+mq.url=
 mq.user=
 mq.password=
-mq.test.queue=MS_MIGRATION
+mq.test.queue=
 
 
 
 #page timing
 pageTiming=true
 
-#browser choice for selenium
-browser.impl=ie
+
 #support:ie,chrome,firefox,phantomjs
 #phantomjs need add sleep time for some action
+browser.impl=ie
 
 #flag for cleanup ie cache
 ie.cleancache=true
