update test.properties, remove some info

--- a/testrunner/properties/test.properties
+++ b/testrunner/properties/test.properties
@@ -6,108 +6,60 @@ properties.version=$Rev: 0001 $
 
 #MQ info
 mq.type=activemq
-activemq.url=tcp://awotorqamqctl01.dev.activenetwork.com:61616
-openmq.url=awotorqamqctl01.dev.activenetwork.com:7676
-
+activemq.url=
+openmq.url=
 mq.user=
 mq.password=
 
 #Proxy server
-proxy.host=awotorproxy01.reserveamerica.com
-proxy.port=8080
+proxy.host=
+proxy.port=
 
-mq.broadcast.topic=BROADCAST
-mq.test.queue=QA_TEST
-mq.rft.queue=RFT_TEST
-mq.sm.queue=SM_TEST
-mq.eft.queue=EFT_TEST
-mq.report.queue=REPORT_TEST
-#mq.watij.test.queue=QA_TEST
-mq.monitor.queue=MONITOR
-mq.monitor.queue2=MONITOR2
-mq.driver.topic=DRIVER
-mq.driver.queue=DRIVER
-mq.runner.topic=RUNNER
+mq.broadcast.topic=
+mq.test.queue=
+mq.rft.queue=
+mq.sm.queue=
+mq.eft.queue=
+mq.report.queue=
+#mq.watij.test.queue=
+mq.monitor.queue=
+mq.monitor.queue2=
+mq.driver.topic=
+mq.driver.queue=
+mq.runner.topic=
 
 #background rpcdaemon
-testdriver.win.base=z:/TestDriver
-testdriver.linux.base=/mnt/automation/TestDriver
-testagent.daemon.jar=z:/TestDriver/rpcdaemon.jar
+testdriver.win.base=
+testdriver.linux.base=
+testagent.daemon.jar=
 #if port is not specified, default will be 4445
 testagent.daemon.port=4445
 
 #testrunner configuration
-test.runner=awotorqatst01,awotorqatst02,awotorqatst03,awotorqatst04,awotorqatst05,awotorqatst06,awotorqatst07,awotorqatst08,awotorqatst09,awotorqatst10,awotorqatst11,awotorqatst12,awotorqatst13,awotorqatst14,awotorqatst15
+test.runner=
 selenium.runners=all
-#only 5 RFT licenses
-rft.runners=awotorqatst01,awotorqatst02,awotorqatst03,awotorqatst04,
-storemanager.runner=awotorqatst01,
-report.runners=awotorqatst06,awotorqatst07,awotorqatst08,awotorqatst09,awotorqatst10,
-eft.runners=awotorqatst05,
 
 #set default tool if toolcode=0: options: selenium, rft
 default.tool=selenium
 default.toolcode=2
 
-test.awotorqatst01.ip=13.134.32.51
-test.awotorqatst02.ip=13.134.32.52
-test.awotorqatst03.ip=13.134.32.53
-test.awotorqatst04.ip=13.134.32.54
-test.awotorqatst05.ip=13.134.32.55
-test.awotorqatst06.ip=13.134.32.56
-test.awotorqatst07.ip=13.134.32.57
-test.awotorqatst08.ip=13.134.32.58
-test.awotorqatst09.ip=13.134.32.59
-test.awotorqatst10.ip=13.134.32.60
-test.awotorqatst11.ip=13.134.32.61
-test.awotorqatst12.ip=13.134.32.62
-test.awotorqatst13.ip=13.134.32.63
-test.awotorqatst14.ip=13.134.32.64
-test.awotorqatst15.ip=13.134.32.65
-test.awotorqatst16.ip=13.134.32.66
-test.awotorqatst17.ip=13.134.32.67
-test.awotorqatst18.ip=13.134.32.68
-test.awotorqatst19.ip=13.134.32.69
-test.awotorqatst20.ip=13.134.32.70
-test.awotorqatst21.ip=13.134.32.71
-test.awotorqatst22.ip=13.134.32.72
-test.awotorqatst23.ip=13.134.32.73
-test.awotorqatst24.ip=13.134.32.74
-test.awotorqatst25.ip=13.134.32.75
-test.awotorqatst26.ip=13.134.32.76
-test.awotorqatst27.ip=13.134.32.77
-test.awotorqatst28.ip=13.134.32.78
-test.awotorqatst29.ip=13.134.32.79
-test.awotorqatst30.ip=13.134.32.80
-test.awotorqatst31.ip=13.134.32.81
-test.awotorqatst32.ip=13.134.32.82
+test.awotorqatst01.ip=
+test.awotorqatst02.ip=
 
-test.monitor=10.134.0.29
+test.monitor=
 
 #Test Cases List Size Limitation
 size_limitation=1000
 
 #Test Env
-test.env=qa1,qa2,qa3,qa4,qa5,live
-test.qa1.url=https://orms-torqa1.dev.activenetwork.com/IndexOfLinks.do
-test.qa2.url=https://orms-torqa2.dev.activenetwork.com/IndexOfLinks.do
-test.qa3.url=https://orms-torqa3.dev.activenetwork.com/IndexOfLinks.do
-test.qa4.url=https://orms-torqa4.dev.activenetwork.com/IndexOfLinks.do
-test.qa5.url=https://orms-torqa5.dev.activenetwork.com/IndexOfLinks.do
-test.live.url=https://orms.reserveamerica.com/IndexOfLinks.do
+test.env=qa,live
+test.qa.url=
+test.live.url=
 
 #ormsrelease ivy
-test.ormsrelease.ivy.url=http://awotordevbld01.dev.activenetwork.com:8081/artifactory/libs-releases-local/reserveamerica/ormsrelease/$<version>/ivy-$<version>.xml
-test.ormsrelease.modules=orms,licensing,marinas
+test.ormsrelease.ivy.url=
+test.ormsrelease.modules=
 
-#EFT case name format
-EFTCases_Format=^(testcases)(\\.\\w*)*\\.eft\\..*
-#exetime for EFT test cases(mins)
-exetime=15
-
-#Report case name format
-ReportCases_Format=^testcases\\.basic\\.orms\\.report\\..*
-#Report runners
 
 #build parameters for framework build machine
 #windows.ant.cmd=C:/apache-ant-1.8.4/bin/ant.bat
@@ -118,50 +70,29 @@ linux.ant.buildfile=buildscript/build.xml
 windows.svn.cmd=svn
 linux.svn.cmd=/usr/bin/svn
 
-windows.functest.basedir=C:/functest
-linux.functest.basedir=/opt/automation/functest
+windows.test4fun.basedir=
+linux.test4fun.basedir=/opt/automation/functest
 
-#selenium.project.folder=functest3_selenium2
-ormsclient.project.folder=ormsclient
-testdriver.project.folder=testdriver
+ormsclient.project.folder=
+testdriver.project.folder=
 
-functest4.awo.default=30602
-functest4.awo.30700.folder=functest4_awo
-functest4.awo.30602.folder=functest4_awo_30602
-functest4.awo.30601.folder=functest4_awo_30601
-functest4.core.folder=functest4_core
-functest4.selenium.driver.folder=functest4_selenium_driver
-functest4.rft.driver.folder=functest4_rft_driver/src
+test4fun.awo.default=
+test4fun.core.folder=
+test4fun.selenium.driver.folder=
+test4fun.rft.driver.folder=
 
-# QA env DB parameters
-#db.qa.user=auto
-#db.qa.pwd = 0A97A61B11FA3EC6959484A3088651BE
-#db.qa.driver = oracle.jdbc.driver.OracleDriver
-#db.qa.url= jdbc:oracle:thin:@awotordevqadb-scan.dev.activenetwork.com:1521/toaoauto
 
 # MIG QA env DB parameters
-db.qa.user=root
+db.qa.user=
 #tchen
-db.qa.password=apps1
+db.qa.password=
 #db.qa.pwd = 0A97A61B11FA3EC6959484A3088651BE
 db.qa.driver = com.mysql.jdbc.Driver
-db.qa.url= jdbc:mysql://localhost:3306/world
+db.qa.url=
 
 
 
 
-#RFT installation path
-rational_ft.install.dir=C:\\Program Files\\IBM
-#Watij DLL file info
-watij.dll.dir=C:\\Windows\\System32
-#StoreManager installation path
-storemanager.install.dir=C:\\Program Files\\Reserve America\\StoreManager\\bin
-
-#StoreManager case name format
-StoreManagerCases_Format=^(testcases\\.).+\\.storemanager\\..*
-
-#Flex case name format, includes TicketManager and SupportCenter
-FlexCases_Format=^(testcases\\.).+\\.flexapp\\..*
 
 #User Defined Test Suite XML File
 TestSuites.file=userTestSuites.xml
@@ -171,10 +102,7 @@ TestSuites.XSD.file=schema.xsd
 #Directory on raon-toolsvm for uploading local file of test case list
 TestSuites.upload.local=~/
 
-#Script path
-ormsclient.dist.basedir=z:\\ormsclient
-
-functest4.base=z:\\functest4
+test4fun.base=z:\\functest4
 
 # logging (log4j) setup
 log4j.appender.stderr=org.apache.log4j.ConsoleAppender
@@ -191,22 +119,21 @@ log4j.appender.logfile.layout.ConversionPattern=[%d] %-5p (%-15c{1}) %-15x - %m%
 
 log4j.rootLogger=INFO, logfile,stderr
 #log4j.rootLogger=DEBUG, logfile, stderr
-#Email
-#mail.smtp.host=raonmail.reserveamerica.com
-mail.smtp.host=awotorsmtp.reserveamerica.com
-#mail.smtp.port=1025
-#mail.smtp.auth=true
-#mail.smtp.user=qachinatest
-#mail.smtp.pw=CEC3DFA8B2ACD095673331FAEF7BBE41
 
-mail.from=noreply@reserveamerica.com
-#mail.to=ao.qaormstest@activenetwork.com
-mail.to=tony.chen@activenetwork.com
-#mail.to=jdu@reserveamerica.com
-mail.sanity.debug.to=AOQAAutomation@activenetwork.com
-mail.regression.debug.to=AOQAAutomation@activenetwork.com
-mail.master.to=James.Du@activenetwork.com;Shane.Song@activenetwork.com;Jane.Wang@activenetwork.com
-mail.domain=activenetwork.com
+#Email
+#mail.smtp.host=
+mail.smtp.host=
+#mail.smtp.port=
+#mail.smtp.auth=
+#mail.smtp.user=
+#mail.smtp.pw=
+
+mail.from=noreply@test4fun.com
+mail.to=
+mail.sanity.debug.to=
+mail.regression.debug.to=
+mail.master.to=
+mail.domain=test4fun.com
 
 #debug
 debug=false
