--- a/testcrawler/build.gradle
+++ b/testcrawler/build.gradle
@@ -10,8 +10,18 @@ repositories {
 }
 
 dependencies {
-    compile group:'com.crawljax' , name:'crawljax-web' , version:'3.6'
-    compile group:'com.crawljax' , name:'crawljax-core' , version:'3.6'
+    compile project(':testapi')
+    compile project(':testdriver')
+    compile group: 'com.crawljax' , name:'crawljax-web' , version:'3.6'
+    compile group: 'com.crawljax' , name:'crawljax-core' , version:'3.6'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-java', version: '2.45.0'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-api', version: '2.45.0'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-ie-driver', version: '2.45.0'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '2.45.0'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-support', version: '2.45.0'
+    compile group: 'org.seleniumhq.selenium', name: 'selenium-remote-driver', version: '2.45.0', transitive: true
+    compile group: 'org.jsoup', name: 'jsoup', version: '1.7.3'
+    compile group: 'org.apache.httpcomponents', name: 'httpcore', version: '4.3.3'
     //testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile files('../testapi/libs/jmockit.jar')
     testCompile group: 'org.testng', name: 'testng', version: '6.9.10'
