--- a/testproject/build.gradle
+++ b/testproject/build.gradle
@@ -97,6 +97,7 @@ dependencies {
 
     compile group: 'org.seleniumhq.selenium', name: 'selenium-api', version: '2.45.0'
     compile group: 'org.uncommons', name: 'reportng', version: '1.1.4'
+    compile group: 'org.testng', name: 'testng', version: '6.9.10'
     compile files('../testapi/libs/autoitx.jar')
 
     testCompile files('../testapi/libs/jmockit.jar')
