Rewrite SendEmail method in TestDriverUtil.java

--- a/testproject/properties/test.properties
+++ b/testproject/properties/test.properties
@@ -8,7 +8,7 @@ project.name=project
 
 testcase.commentPattern=^#.*
 
-target_env=qa5
+target_env=qa
 
 
 # db driver
@@ -16,11 +16,20 @@ db.oracle.driver = oracle.jdbc.driver.OracleDriver
 db.mysql.driver = com.mysql.jdbc.Driver
 
 #the automation database
-
 auto.db.vendor=mysql
 auto.db.connectURL=jdbc:mysql://WD00070367:3306/mig_qa
 auto.db.user=mig_auto
 auto.db.psw = apps1
+
+
+#qa db connection
+qa.db.vendor=
+qa.db.connecturl=
+qa.db.user
+qa.db.pw
+
+#qa url
+qa.url
 
 
 
