Update RPCDaemon.java, need split the share folder location and the main class

--- a/testrunner/build.gradle
+++ b/testrunner/build.gradle
@@ -39,3 +39,7 @@ dependencies {
     testCompile group: 'org.testng', name: 'testng', version: '6.9.10'
 
 }
+
+//tasks buildjar rpcdaemon.jar
+
+//task build jar
